fix #mapbox-container.expanded height on mobile

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -1063,7 +1063,7 @@ input[type='radio']:focus {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
+  height: 100vh;
   border: none;
   width: 100%;
   margin: 0 !important;
